# PM

./: .gitignore  CMakeLists.txt  README.md
assignment1/: assignment1.md  doorn1.cpp  report.tex
assignment2/: assignment2.md  doorn2.cpp  report.tex
assignment2/checks/: lastiguit.txt  simpel2019.txt  test2019uit.txt
assignment2/input/: lastig.txt  simpel2019.txt  test2019.txt
assignment3/: assignment3.md  doorn3.cpp
assignment3/templates/: gosper_glider_gun.txt  queen_bee.txt
assignment4/: assignment4.md  board.cpp  board.h  goboard.cpp  main.cpp  makefile
practice/: main.cpp
